Project authentication {
  database_type: 'PostgreSQL'

  Note: 'Authentication database'
}

//// ------------------------------------------------------
////
//// Tables
////
//// ------------------------------------------------------

Table authentication.accounts as a {
	id UUID [pk]
  created_at DateTime [default: `now()`, not null]

  Note: 'Contains users sign in information'
}

Table authentication.refresh_tokens as rt {
  account_id UUID [not null]
  refresh_token String [unique, not null]
  created_at DateTime [default: `now()`, not null]

  indexes {
    (account_id, refresh_token) [pk]
  }

  Note: 'Contains codes to be used to refresh the access token'
}


Table authentication.magic_link_codes as mlc {
  account_id UUID [pk]
  code String [not null]
  is_first_access Boolean [not null]
  created_at DateTime [default: `now()`, not null]

  Note: 'Contains codes to be used by the users to login'
}

Table authentication.sign_in_providers as sip {
  account_id UUID [not null]
  provider SignInProviderEnum [not null]
  provider_id String [not null]
  access_token String [not null]
  refresh_token String
  expires_at DateTime [not null]
  created_at DateTime [default: `now()`, not null]

  indexes {
    (account_id, provider, provider_id) [pk]
  }

  Note: 'Contains user\'s link to sign in providers, like google, discord, etc'
}

Table authentication.email_addresses as ea {
  account_id UUID [not null]
  email_address String [not null]
  created_at DateTime [default: `now()`, not null]
  verified_at DateTime

  indexes {
    (account_id, email_address) [pk]
    (email_address) [unique]
  }

  Note: 'Contains user\'s email addresses'
}

Table authentication.phone_numbers as pn {
  account_id UUID [not null]
  country_code String [not null]
  phone_number String [not null]
  created_at DateTime [default: `now()`, not null]
  verified_at DateTime

  indexes {
    (account_id, country_code, phone_number) [pk]
    (country_code, phone_number) [unique]
  }

  Note: 'Contains user\'s phone numbers'
}

//// ------------------------------------------------------
////
//// Enums
////
//// ------------------------------------------------------

Enum SignInProviderEnum {
  FACEBOOK
  GOOGLE
  DISCORD
}

//// ------------------------------------------------------
////
//// Relationships
////
//// ------------------------------------------------------

Ref: rt.account_id > a.id [delete: Cascade]
Ref: mlc.account_id > a.id [delete: Cascade]
Ref: sip.account_id > a.id [delete: Cascade]
Ref: ea.account_id > a.id [delete: Cascade]
Ref: pn.account_id > a.id [delete: Cascade]
